kubernetes/base/coredns-integration.yaml
# See: https://zenn.dev/tochiman/articles/09fb40d554bef5
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-service
spec:
  selector:
    app: coredns-deployment
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coredns-deployment
  template:
    metadata:
      labels:
        app: coredns-deployment
    spec:
      containers:
        - name: coredns
          image: coredns/coredns:1.10.1
          args:
            - -conf
            - /etc/coredns/Corefile
          volumeMounts:
            - name: config-volume
              mountPath: /etc/coredns
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: coredns-custom-config
