kubernetes/base/database-integration.yml
---
apiVersion: v1
kind: Service
metadata:
  name: database-service-headless
spec:
  clusterIP: None
  selector:
    app: database-deployment
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-deployment
  template:
    metadata:
      labels:
        app: database-deployment
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.34
        volumeMounts:
          - name: databaes-pvc-volume
            mountPath: /var/lib/mysql
            subPath: data
          - name: sql-init-volume
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sql-init-volume
          configMap:
            name: sql-init-configmap
            items:
              - key: init.sql
                path: init.sql
  volumeClaimTemplates:
  - metadata:
      name: databaes-pvc-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
