kubernetes/base/nextcloud-integration.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  type: NodePort
  selector:
    app: nextcloud-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-deployment
  template:
    metadata:
      labels:
        app: nextcloud-deployment
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:28.0.1-apache
        ports:
        - containerPort: 80
